# cs50

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CLAUDE.md  README.md  compile.sh  meson.build
credit/: meson.build
credit/src/: main.c
libs/cs50/: meson.build
plurality/: meson.build
plurality/include/: plurality.h
plurality/src/: plurality.c
plurality/test/: test.c
projects/credit/: main.c  meson.build
projects/plurality/: .clangd  meson.build
projects/plurality/include/: plurality.h
projects/plurality/src/: main.c  plurality.c
projects/plurality/test/: test.c
projects/readability/: .clangd  meson.build
projects/readability/src/: main.c  readability.c  test.c
projects/scrabble/: meson.build
projects/substitution/: .clangd  meson.build
projects/substitution/include/: encipher.h
projects/substitution/src/: main.c
projects/substitution/test/: test.c
projects/world/: hello  hello.c
readability/: meson.build
readability/include/: main.h
readability/src/: main.c  test.c
scrabble/: meson.build
scrabble/src/: main.c
sort/: answers.txt  meson.build
sort/test/: test.c
subprojects/: libcs50.wrap
substitution/: meson.build
substitution/include/: encipher.h  encrypt.h
substitution/src/: encipher.c  encrypt.c  main.c  test.c
substitution/test/: test.c
